--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,5 +31,6 @@
             </intent-filter>
         </activity>
         <service android:name="com.perples.recosdk.RECOBeaconService" />
+        <service android:name=".RecoBackgroundMonitoringService" />
     </application>
 </manifest>
